--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css2?family=Cutive:wght@400;700&display=swap' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap' rel='stylesheet'>
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imagens/icone 1.png" type="image/x-icon">
 
     <title>Portfolio</title>
 </head>
@@ -81,7 +81,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="assets/images/avatar.png" alt="avatar">
+                <img src="assets/imagens/Perfil.png" alt="avatar">
             </div>
           </div>
        </section>
